force-app/main/default/objects/Zip_Code__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AU</fullName>
                <label>Australia</label>
            </value>
            <value>
                <fullName>MX</fullName>
                <label>Mexico</label>
            </value>
            <value>
                <fullName>US</fullName>
                <label>USA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>