force-app/main/default/objects/Zip_Code__c/fields/Other_Ino__c.field-meta.xml
<CustomField>
    <fullName>Other_Ino__c</fullName>
    <label>Other Ino</label>
    <type>TextArea</type>
</CustomField>