force-app/main/default/objects/Zip_Code__c/fields/Place_Name__c.field-meta.xml
<CustomField>
    <fullName>Place_Name__c</fullName>
    <label>Place Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>