force-app/main/default/objects/Zip_Code__c/fields/PostCode__c.field-meta.xml
<CustomField>
    <fullName>PostCode__c</fullName>
    <externalId>true</externalId>
    <label>Post Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>